--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "main": "index.js",
     "dependencies": {
         "md5": "^2.2.1",
-        "mongoose": "^4.13.9"
+        "mongoose": ">=5.7.5"
     }
 }
